# e57-file-splitter

./: .gitignore  CMakeLists.txt  Dockerfile.windows  README.md  windows-toolchain.cmake
.github/workflows/: build-linux.yml  build-windows.yml
src/: main.cpp
